# sifaka2

./: .dir-locals.el  .gitignore  Makefile  cabal.project  cabal.project.local  implementation.dj  notes.dj  shell.nix  theory.dj
fnotation/: CHANGELOG.md  Makefile  README.md  fnotation.cabal  notes.md
fnotation/src/: FNotation.hs
fnotation/src/FNotation/: Config.hs  Diagnostic.hs  FNtn.hs  Lexer.hs  Parser.hs  Prelude.hs  Span.hs  Token.hs  Util.hs
fnotation/src/FNotation/Internal/: Util.hs
fnotation/src/FNotation/Parser/: ParseState.hs
fnotation/test/: Main.hs  arithmetic.fntn  arithmetic.lexed  arithmetic.parsed  unicode.fntn  unicode.lexed  unicode.parsed
mltt/: CHANGELOG.md  mltt.cabal
mltt/app/: Common.hs  Elaboration.hs  Evaluation.hs  Main.hs  Parsing.hs  Pretty.hs  Syntax.hs  Unification.hs  Value.hs
mltt/examples/: test.mltt
sifaka2/: CHANGELOG.md  LICENSE  sifaka2.cabal
sifaka2/app/: Main.hs
sifaka2/examples/: dream.sfk  hello_world.ssa  test.sfk  wrapper.ssa
sifaka2/runtime/: runtime.c
sifaka2/src/: Sifaka.hs
sifaka2/src/Sifaka/: CodeGen.hs  Common.hs  Elab.hs  Elaboration.hs  Eval.hs  Evaluation.hs  Qbe.hs  Syntax.hs  Value.hs
sifaka2/src/Sifaka/Util/: Bwd.hs  Fwd.hs
