cabal-version: 3.0
name: sifaka2
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
maintainer: root@owenlynch.org
author: Owen Lynch
category: Language
build-type: Simple
extra-doc-files: CHANGELOG.md

library
  exposed-modules:
    Sifaka
    Sifaka.CodeGen
    Sifaka.Common
    Sifaka.Elaboration
    Sifaka.Evaluation
    Sifaka.Qbe
    Sifaka.Syntax
    Sifaka.Value

  hs-source-dirs: src
  default-language: GHC2021
  default-extensions:
    CPP
    DerivingVia
    FunctionalDependencies
    ImplicitParams
    LambdaCase
    OverloadedStrings
    Strict
    StrictData

  ghc-options: -Wall
  build-depends:
    base ^>=4.19.2.0,
    bytestring >=0.12.1.0,
    containers,
    dynamic-array,
    fnotation ^>=0.2.0.0,
    hashable >=1.5.0.0,
    mtl,
    ordered-containers,
    prettyprinter,
    process >=1.6.25.0,
    temporary,
    text,
    transformers,
    vector,
    vector-hashtables,

executable sifaka2
  main-is: Main.hs
  hs-source-dirs: app
  default-language: GHC2021
  default-extensions:
    CPP
    DerivingVia
    FunctionalDependencies
    ImplicitParams
    LambdaCase
    OverloadedStrings
    Strict
    StrictData

  ghc-options:
    -Wall
    -prof
    -with-rtsopts=-xc

  build-depends:
    base ^>=4.19.2.0,
    bytestring >=0.12.1.0,
    containers,
    fnotation,
    optparse-applicative >=0.19.0.0,
    process,
    sifaka2,
    text,

test-suite sifaka2-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  default-language: GHC2021
  ghc-options: -Wall
  build-depends:
    base ^>=4.19.2.0,
    bytestring >=0.12.1.0,
    sifaka2,
